added DELETE, PUT y POST + openapi spec
